--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -11,47 +11,47 @@ stages:
     commands:
     - echo 'thanks for building me'
 
-# bots:
-#   any-event-bot:
-#     triggers:
-#     - github:
-#         events:
-#         - commit_comment
-#         - create
-#         - delete
-#         - deployment
-#         - deployment_status
-#         - fork
-#         - gollum
-#         - installation
-#         - installation_repositories
-#         - issue_comment
-#         - issues
-#         - label
-#         - marketplace_purchase
-#         - member
-#         - membership
-#         - milestone
-#         - organization
-#         - org_block
-#         - page_build
-#         - project_card
-#         - project_column
-#         - project
-#         - public
-#         - pull_request_review_comment
-#         - pull_request_review
-#         - pull_request
-#         - push
-#         - release
-#         - repository
-#         - status
-#         - team
-#         - team_add
-#         - watch
-#         - integration_installation_repositories
-#     stages:
-#       backup:
-#         image: alpine:latest
-#         commands:
-#         - echo 'thanks for running me'
+bots:
+  any-event-bot:
+    triggers:
+    - github:
+        events:
+        - commit_comment
+        - create
+        - delete
+        - deployment
+        - deployment_status
+        - fork
+        - gollum
+        - installation
+        - installation_repositories
+        - issue_comment
+        - issues
+        - label
+        - marketplace_purchase
+        - member
+        - membership
+        - milestone
+        - organization
+        - org_block
+        - page_build
+        - project_card
+        - project_column
+        - project
+        - public
+        - pull_request_review_comment
+        - pull_request_review
+        - pull_request
+        - push
+        - release
+        - repository
+        - status
+        - team
+        - team_add
+        - watch
+        - integration_installation_repositories
+    stages:
+      backup:
+        image: alpine:latest
+        commands:
+        - echo 'thanks for running me'
